--- a/index.html
+++ b/index.html
@@ -9,10 +9,65 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
+    <div class="container-fluid bg">
+        <header class="row d-flex mt-5">
+            <div class="d-flex col-4 ml-md-auto bg-warning header">
+                <h4 class="mr-3">
+                    contacts
+                </h4>
 
+                <h4 class="ml-3">
+                    projects
+                </h4>
+            </div>
+        </header>
+        <section class="row">
+            <div class="col-md-10 col-12 m-auto">
+                <div class="mt-4">
+                    <h1>> Tresor bireke</h1>
+                </div>
+
+                <div class="mt-2 py-5">
+                    <p>
+                        I'm a web developer and a computer scintist,my passion is building fast and powerfull back-end services <br> Checkout my projects below
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="row">
+            <div class="editor col-md-10 bg-dark text-light m-auto">
+                <div class="editor-h row bg-light">
+                    <p>volllll</p>
+                </div>
+                <div class="edito-text mt-2">
+                    <p class="mt-4">
+                        > Tresor.location <br>
+                        <span class="string">"Kigali , Rw"</span>
+                    </p>
+
+                    <p class="mt-4">
+                        > Tresor.contact <br>
+                        <span class="string">["<span class="link">tresor.moise2001@gmail.com</span>","<span class="link">LinkedIn</span>","<span class=link>github</span>"]</span>
+                    </p>
+
+                    <p class="mt-4">
+                        > Tresor.resume <br>
+                        <span class="string">"<span class=link>Tresor.pdf</span>"</span>
+                    </p>
+
+                    <p class="mt-4">
+                        > Tresor.interest <br>
+                        <span class="string">["back-end","editing","basketball"]</span>
+                    </p>
+                </div>
+            </div>
+        </section>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
