--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 <body>
     <div class="container-fluid bg">
         <header class="row d-flex mt-5">
-            <div class="d-flex col-4 ml-md-auto bg-warning header">
-                <h4 class="mr-3">
-                    contacts
+            <div class="d-flex col-12 col-md-4 ml-md-auto header justify-content-center">
+                <h4 class="mr-3 text-center">
+                    <a href="#project">Projects</a>
                 </h4>
 
-                <h4 class="ml-3">
-                    projects
+                <h4 class="ml-3 text-center">
+                    <a href="#contact">Contact</a>
                 </h4>
             </div>
         </header>
         <section class="row">
             <div class="col-md-10 col-12 m-auto">
-                <div class="mt-4">
-                    <h1>> Tresor bireke</h1>
+                <div class="mt-4 name">
+                    <h1>> Tresor bireke <span class="beep">&nbsp;</span></h1>
                 </div>
 
                 <div class="mt-2 py-5">
@@ -39,34 +39,128 @@
             </div>
         </section>
 
-        <section class="row">
-            <div class="editor col-md-10 bg-dark text-light m-auto">
-                <div class="editor-h row bg-light">
-                    <p>volllll</p>
+        <section class="row mb-4 main">
+            <div class="editor col-md-10 text-light m-auto">
+                <div class="editor-h row bg-light py-2">
+                    <div class="editor-b bg-danger ml-4"></div>
+                    <div class="editor-b bg-warning ml-2"></div>
+                    <div class="editor-b bg-success ml-2"></div>
                 </div>
                 <div class="edito-text mt-2">
-                    <p class="mt-4">
+                    <p class="mt-4 text-light">
                         > Tresor.location <br>
                         <span class="string">"Kigali , Rw"</span>
                     </p>
 
-                    <p class="mt-4">
+                    <p class="mt-4 text-wrap text-light">
                         > Tresor.contact <br>
-                        <span class="string">["<span class="link">tresor.moise2001@gmail.com</span>","<span class="link">LinkedIn</span>","<span class=link>github</span>"]</span>
+                        <span class="string">["<a href="mailto:tresor.moise2001@gmail.com.com?Subject=Hello%20again""><span class="link">tresor.moise2001@gmail.com</span></a>", "<a href=""><span class="link">LinkedIn</span></a>" , "
+                        <a href="https://github.com/Tresor11"><span class=link>github</span></a>"]</span>
                     </p>
 
-                    <p class="mt-4">
+                    <p class="mt-4 text-wrap text-light">
                         > Tresor.resume <br>
-                        <span class="string">"<span class=link>Tresor.pdf</span>"</span>
+                        <span class="string">"<span class=link> <a href="images/Resume.pdf">Tresor.pdf</a></span>"</span>
                     </p>
 
-                    <p class="mt-4">
+                    <p class="mt-4 text-wrap text-light">
                         > Tresor.interest <br>
                         <span class="string">["back-end","editing","basketball"]</span>
+                    </p>
+
+                    <p class="mt-4 text-wrap text-light">
+                        > Tresor.education <br>
+                        <span class="string">["Certificate Full stack-developement microverse", "Bsc computer science Kigali independent unviversity"]</span>
+                    </p>
+
+                    <p class="mt-4 text-wrap text-light">
+                        > Tresor.Skills <br>
+                        <span class="string">["ruby on rails", "ruby", "JavaScript", "react", "redux", "bootstrap", "Sass", "Html", "Css"]</span>
+                    </p>
+
+                    <p class="mt-4 text-light">
+                        ><span class="beep"><span class="beep bg-light ml-2">&nbsp;</span></span>
                     </p>
                 </div>
             </div>
         </section>
+
+        <section class="row">
+            <div class="col-4 m-auto">
+                <h1 class="text-center" id="project">Projects</h1>
+            </div>
+            <span class="py-4">
+            <div class="card py-2 col-12 col-md-10 m-auto">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="images/screencapture-rawcdn-githack-com-Datagirlcmr-Grid-Based-Framework-fc3b8b29238caae65c455421945806fafeeb0f03-index-html-1583430348607.png" class="card-img card-md-img-top" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title display-5 font-weight-bold ">Mini Css framework</h5>
+                            <p class="card-text small">on this project we disinged our own framework using Sass</p>
+                            <div><button type="button" class="btn btn-outline-primary"><a href="https://github.com/Datagirlcmr/Grid-Based-Framework">Github</a></button> <button type="button" class="btn btn-outline-primary"> <a href="https://rawcdn.githack.com/Datagirlcmr/Grid-Based-Framework/fc3b8b29238caae65c455421945806fafeeb0f03/index.html">live demo</a> </button>  </div>
+                            <p class="card-text small"><small class="text-muted">updated 3 months ago</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </span>
+
+
+            <span class="py-4">
+            <div class="card py-2 col-12 col-md-10 m-auto">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="images/screencapture-rawcdn-githack-com-Tresor11-News-week-112fde3d3d4af97abae388107fc75ff3bac8c1f4-index-html-1583429852899.png" class="card-img card-md-img-top" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title display-5 font-weight-bold ">News week</h5>
+                            <p class="card-text small">Redisigned the famous news week website using only bootstrap</p>
+                            <div><button type="button" class="btn btn-outline-primary"><a href="https://github.com/Tresor11/News-week">Github</a></button> <button type="button" class="btn btn-outline-primary"><a href="https://rawcdn.githack.com/Tresor11/News-week/112fde3d3d4af97abae388107fc75ff3bac8c1f4/index.html">live demo</a></button>  </div>
+                            <p class="card-text small"><small class="text-muted">updated 3 months ago</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </span>
+
+            <span class="py-4">
+            <div class="card py-2 col-12 col-md-10 m-auto">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="images/D6evv.png" class="card-img card-md-img-top" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title display-5 font-weight-bold ">Css Linter</h5>
+                            <p class="card-text small">I created a css linter capacable of telling if your code contains errors Using Ruby</p>
+                            <div><button type="button" class="btn btn-outline-primary"> <a href="https://github.com/Tresor11/css-linter">Github</a> </button></div>
+                            <p class="card-text small"><small class="text-muted">updated 2 months ago</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </span>
+        </section>
+
+        <footer class="row">
+            <div class="col-12" id="contact">
+                <h1 class="text-center">Contacts</h1>
+            </div>
+            <div class="col-6 text-center py-4 m-auto d-flex justify-content-between">
+                <p class=" m-1">
+                    <a href="">Github</a>
+                </p>
+                <p class=" m-1">
+                    <a href="">Twiter</a>
+                </p>
+                <p class=" m-1">
+                    <a href="">Medium</a>
+                </p>
+            </div>
+        </footer>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
