fixed the styles

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                 <div class="mt-2 py-5">
                     <p>
-                        I'm a web developer and a computer scintist,my passion is building fast and powerfull back-end services <br> Checkout my projects below
+                        I'm a web developer and a computer lover,my passion is building fast and powerfull back-end services <br> Checkout my projects below
                     </p>
                 </div>
             </div>
@@ -149,14 +149,14 @@
             <div class="col-12" id="contact">
                 <h1 class="text-center">Contacts</h1>
             </div>
-            <div class="col-6 text-center py-4 m-auto d-flex justify-content-between">
-                <p class=" m-1">
+            <div class="col-12 col-md-6 text-center py-4 m-auto d-flex justify-content-between">
+                <p class=" m-md-1">
                     <a href="">Github</a>
                 </p>
-                <p class=" m-1">
+                <p class=" m-md-1">
                     <a href="">Twiter</a>
                 </p>
-                <p class=" m-1">
+                <p class=" m-md-1">
                     <a href="">Medium</a>
                 </p>
             </div>
