reduced the image size

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="card py-2 col-12 col-md-10 m-auto">
                 <div class="row no-gutters">
                     <div class="col-md-4">
-                        <img src="images/screencapture-rawcdn-githack-com-Datagirlcmr-Grid-Based-Framework-fc3b8b29238caae65c455421945806fafeeb0f03-index-html-1583430348607.png" class="card-img card-md-img-top" alt="...">
+                        <img src="images/screencapture-rawcdn-githack-com-Datagirlcmr-Grid-Based-Framework-fc3b8b29238caae65c455421945806fafeeb0f03-index-html-1583430348607 (1).png" class="card-img card-md-img-top" alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -112,7 +112,7 @@
             <div class="card py-2 col-12 col-md-10 m-auto">
                 <div class="row no-gutters">
                     <div class="col-md-4">
-                        <img src="images/screencapture-rawcdn-githack-com-Tresor11-News-week-112fde3d3d4af97abae388107fc75ff3bac8c1f4-index-html-1583429852899.png" class="card-img card-md-img-top" alt="...">
+                        <img src="images/screencapture-rawcdn-githack-com-Tresor11-News-week-112fde3d3d4af97abae388107fc75ff3bac8c1f4-index-html-1583429852899 (1).png" class="card-img card-md-img-top" alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -130,7 +130,7 @@
             <div class="card py-2 col-12 col-md-10 m-auto">
                 <div class="row no-gutters">
                     <div class="col-md-4">
-                        <img src="images/D6evv.png" class="card-img card-md-img-top" alt="...">
+                        <img src="images/D6evv (1).png" class="card-img card-md-img-top" alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
