fixed the links

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 
                     <p class="mt-4 text-wrap text-light">
                         > Tresor.contact <br>
-                        <span class="string">["<a href="mailto:tresor.moise2001@gmail.com.com?Subject=Hello%20again""><span class="link">tresor.moise2001@gmail.com</span></a>", "<a href=""><span class="link">LinkedIn</span></a>" , "
+                        <span class="string">["<a href="mailto:tresor.moise2001@gmail.com.com?Subject=Hello%20again"><span class="link">tresor.moise2001@gmail.com</span></a>", "<a href="http://www.linkedin.com/in/tresor-bireke"><span class="link">LinkedIn</span></a>"
+                        , "
                         <a href="https://github.com/Tresor11"><span class=link>github</span></a>"]</span>
                     </p>
 
@@ -151,13 +152,13 @@
             </div>
             <div class="col-12 col-md-6 text-center py-4 m-auto d-flex justify-content-between">
                 <p class=" m-md-1">
-                    <a href="">Github</a>
+                    <a href="https://github.com/Tresor11">Github</a>
                 </p>
                 <p class=" m-md-1">
-                    <a href="">Twiter</a>
+                    <a href="https://twitter.com/TBireke">Twiter</a>
                 </p>
                 <p class=" m-md-1">
-                    <a href="">Medium</a>
+                    <a href="https://medium.com/@tresor.moise2001">Medium</a>
                 </p>
             </div>
         </footer>
