added the stack used

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/style.css">
+    <script src="https://kit.fontawesome.com/cce6e1325c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -28,7 +29,7 @@
         <section class="row">
             <div class="col-md-10 col-12 m-auto">
                 <div class="mt-4 name">
-                    <h1>> Tresor bireke <span class="beep">&nbsp;</span></h1>
+                    <h1>> Tresor bireke<span class="beep">&nbsp;</span></h1>
                 </div>
 
                 <div class="mt-2 py-5">
@@ -100,16 +101,21 @@
                         <div class="card-body">
                             <h5 class="card-title display-5 font-weight-bold ">Mini Css framework</h5>
                             <p class="card-text small">on this project we disinged our own framework using Sass</p>
-                            <div><button type="button" class="btn btn-outline-primary"><a href="https://github.com/Datagirlcmr/Grid-Based-Framework">Github</a></button> <button type="button" class="btn btn-outline-primary"> <a href="https://rawcdn.githack.com/Datagirlcmr/Grid-Based-Framework/fc3b8b29238caae65c455421945806fafeeb0f03/index.html">live demo</a> </button>  </div>
-                            <p class="card-text small"><small class="text-muted">updated 3 months ago</small></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </span>
+                            <div class="py-2">
+            <span class="badge badge-pill badge-secondary">HTML</span>
+            <span class="badge badge-pill badge-secondary">CSS</span>
+            <span class="badge badge-pill badge-secondary">SASS</span>
+    </div>
+    <div><button type="button" class="btn btn-outline-primary"><a href="https://github.com/Datagirlcmr/Grid-Based-Framework">Github</a></button> <button type="button" class="btn btn-outline-primary"> <a href="https://rawcdn.githack.com/Datagirlcmr/Grid-Based-Framework/fc3b8b29238caae65c455421945806fafeeb0f03/index.html">live demo</a> </button>        </div>
+    <p class="card-text small"><small class="text-muted">updated 3 months ago</small></p>
+    </div>
+    </div>
+    </div>
+    </div>
+    </span>
 
 
-            <span class="py-4">
+    <span class="py-4">
             <div class="card py-2 col-12 col-md-10 m-auto">
                 <div class="row no-gutters">
                     <div class="col-md-4">
@@ -119,15 +125,20 @@
                         <div class="card-body">
                             <h5 class="card-title display-5 font-weight-bold ">News week</h5>
                             <p class="card-text small">Redisigned the famous news week website using only bootstrap</p>
-                            <div><button type="button" class="btn btn-outline-primary"><a href="https://github.com/Tresor11/News-week">Github</a></button> <button type="button" class="btn btn-outline-primary"><a href="https://rawcdn.githack.com/Tresor11/News-week/112fde3d3d4af97abae388107fc75ff3bac8c1f4/index.html">live demo</a></button>  </div>
-                            <p class="card-text small"><small class="text-muted">updated 3 months ago</small></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </span>
+                            <div class="py-2">
+                                <span class="badge badge-pill badge-secondary">HTML</span>
+    <span class="badge badge-pill badge-secondary">BOOTSTRAP</span>
+    <span class="badge badge-pill badge-secondary">CSS</span>
+    </div>
+    <div><button type="button" class="btn btn-outline-primary"><a href="https://github.com/Tresor11/News-week">Github</a></button> <button type="button" class="btn btn-outline-primary"><a href="https://rawcdn.githack.com/Tresor11/News-week/112fde3d3d4af97abae388107fc75ff3bac8c1f4/index.html">live demo</a></button>        </div>
+    <p class="card-text small"><small class="text-muted">updated 3 months ago</small></p>
+    </div>
+    </div>
+    </div>
+    </div>
+    </span>
 
-            <span class="py-4">
+    <span class="py-4">
             <div class="card py-2 col-12 col-md-10 m-auto">
                 <div class="row no-gutters">
                     <div class="col-md-4">
@@ -137,31 +148,35 @@
                         <div class="card-body">
                             <h5 class="card-title display-5 font-weight-bold ">Css Linter</h5>
                             <p class="card-text small">I created a css linter capacable of telling if your code contains errors Using Ruby</p>
-                            <div><button type="button" class="btn btn-outline-primary"> <a href="https://github.com/Tresor11/css-linter">Github</a> </button></div>
-                            <p class="card-text small"><small class="text-muted">updated 2 months ago</small></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </span>
-        </section>
+                            <div class="py-2">
+                                <span class="badge badge-pill badge-secondary">Ruby</span>
+    <span class="badge badge-pill badge-secondary">RSPEC</span>
+    </div>
+    <div><button type="button" class="btn btn-outline-primary"> <a href="https://github.com/Tresor11/css-linter"> Github</a> </button></div>
+    <p class="card-text small"><small class="text-muted">updated 2 months ago</small></p>
+    </div>
+    </div>
+    </div>
+    </div>
+    </span>
+    </section>
 
-        <footer class="row">
-            <div class="col-12" id="contact">
-                <h1 class="text-center">Contacts</h1>
-            </div>
-            <div class="col-12 col-md-6 text-center py-4 m-auto d-flex justify-content-between">
-                <p class=" m-md-1">
-                    <a href="https://github.com/Tresor11">Github</a>
-                </p>
-                <p class=" m-md-1">
-                    <a href="https://twitter.com/TBireke">Twiter</a>
-                </p>
-                <p class=" m-md-1">
-                    <a href="https://medium.com/@tresor.moise2001">Medium</a>
-                </p>
-            </div>
-        </footer>
+    <footer class="row">
+        <div class="col-12" id="contact">
+            <h1 class="text-center">Contacts</h1>
+        </div>
+        <div class="col-12 col-md-6 text-center py-4 m-auto d-flex justify-content-between">
+            <p class=" m-md-1">
+                <a href="https://github.com/Tresor11"> <i class="fas fa-github" aria-hidden="true"></i> Github</a>
+            </p>
+            <p class=" m-md-1">
+                <a href="https://twitter.com/TBireke">Twiter</a>
+            </p>
+            <p class=" m-md-1">
+                <a href="https://medium.com/@tresor.moise2001">Medium</a>
+            </p>
+        </div>
+    </footer>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
