added the icons

--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title display-5 font-weight-bold ">Mini Css framework</h5>
-                            <p class="card-text small">on this project we disinged our own framework using Sass</p>
+                            <p class="card-text medium">on this project we disinged our own framework using Sass</p>
                             <div class="py-2">
             <span class="badge badge-pill badge-secondary">HTML</span>
             <span class="badge badge-pill badge-secondary">CSS</span>
             <span class="badge badge-pill badge-secondary">SASS</span>
     </div>
-    <div><button type="button" class="btn btn-outline-primary"><a href="https://github.com/Datagirlcmr/Grid-Based-Framework">Github</a></button> <button type="button" class="btn btn-outline-primary"> <a href="https://rawcdn.githack.com/Datagirlcmr/Grid-Based-Framework/fc3b8b29238caae65c455421945806fafeeb0f03/index.html">live demo</a> </button>        </div>
+    <div><button type="button" class="btn btn-outline-primary"><a href="https://github.com/Datagirlcmr/Grid-Based-Framework"><span class="fab fa-github"></span> Github</a></button> <button type="button" class="btn btn-outline-primary"> <a href="https://rawcdn.githack.com/Datagirlcmr/Grid-Based-Framework/fc3b8b29238caae65c455421945806fafeeb0f03/index.html"><span class="fas fa-globe-europe"></span> live demo</a> </button>        </div>
     <p class="card-text small"><small class="text-muted">updated 3 months ago</small></p>
     </div>
     </div>
@@ -124,13 +124,13 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title display-5 font-weight-bold ">News week</h5>
-                            <p class="card-text small">Redisigned the famous news week website using only bootstrap</p>
+                            <p class="card-text medium">Redisigned the famous news week website using only bootstrap</p>
                             <div class="py-2">
                                 <span class="badge badge-pill badge-secondary">HTML</span>
     <span class="badge badge-pill badge-secondary">BOOTSTRAP</span>
     <span class="badge badge-pill badge-secondary">CSS</span>
     </div>
-    <div><button type="button" class="btn btn-outline-primary"><a href="https://github.com/Tresor11/News-week">Github</a></button> <button type="button" class="btn btn-outline-primary"><a href="https://rawcdn.githack.com/Tresor11/News-week/112fde3d3d4af97abae388107fc75ff3bac8c1f4/index.html">live demo</a></button>        </div>
+    <div><button type="button" class="btn btn-outline-primary"><a href="https://github.com/Tresor11/News-week"><span class="fab fa-github"></span> Github</a></button> <button type="button" class="btn btn-outline-primary"><a href="https://rawcdn.githack.com/Tresor11/News-week/112fde3d3d4af97abae388107fc75ff3bac8c1f4/index.html"><span class="fas fa-globe-europe"></span> live demo</a></button>        </div>
     <p class="card-text small"><small class="text-muted">updated 3 months ago</small></p>
     </div>
     </div>
@@ -147,12 +147,12 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title display-5 font-weight-bold ">Css Linter</h5>
-                            <p class="card-text small">I created a css linter capacable of telling if your code contains errors Using Ruby</p>
+                            <p class="card-text medium">I created a css linter capacable of telling if your code contains errors Using Ruby</p>
                             <div class="py-2">
                                 <span class="badge badge-pill badge-secondary">Ruby</span>
     <span class="badge badge-pill badge-secondary">RSPEC</span>
     </div>
-    <div><button type="button" class="btn btn-outline-primary"> <a href="https://github.com/Tresor11/css-linter"> Github</a> </button></div>
+    <div><button type="button" class="btn btn-outline-primary"> <a href="https://github.com/Tresor11/css-linter"><span class="fab fa-github"></span> Github</a> </button></div>
     <p class="card-text small"><small class="text-muted">updated 2 months ago</small></p>
     </div>
     </div>
@@ -167,14 +167,17 @@
         </div>
         <div class="col-12 col-md-6 text-center py-4 m-auto d-flex justify-content-between">
             <p class=" m-md-1">
-                <a href="https://github.com/Tresor11"> <i class="fas fa-github" aria-hidden="true"></i> Github</a>
+                <a href="https://github.com/Tresor11"><span class="fab fa-github"></span> Github</a>
             </p>
             <p class=" m-md-1">
-                <a href="https://twitter.com/TBireke">Twiter</a>
+                <a href="https://twitter.com/TBireke"><span class="fab fa-twitter"></span> Twitter</a>
             </p>
             <p class=" m-md-1">
-                <a href="https://medium.com/@tresor.moise2001">Medium</a>
+                <a href="https://medium.com/@tresor.moise2001"><span class="fab fa-medium"></span> Medium</a>
             </p>
+        </div>
+        <div class="col-12 col-md-7 text-center text-center py-4 m-auto d-flex justify-content-around">
+            <small>Made by Tresor bireke © 2020</small><small>inspired by justin chi</small>
         </div>
     </footer>
     </div>
