added the scroll effect

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                     <p class="mt-4 text-wrap text-light">
                         > Tresor.interests <br>
-                        <span class="string">["back-end","algorithms","basketball"]</span>
+                        <span class="string">["Back-end","Algorithms","Basketball"]</span>
                     </p>
 
                     <p class="mt-4 text-wrap text-light">
