corrected the spelling

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title display-5 font-weight-bold ">Rails-Tic</h5>
-                                <p class="card-text medium">A social media web appliction based on facebook where user can share,comment and like a post , it also allow to send a friend reauest to an other user.built with Rails
+                                <p class="card-text medium">A social media web application based on Facebook where users can share,comment and like a post , it also allow a user to send a friend request to an other user.built with Rails
                                 </p>
                                 <div class="py-2">
                                     <span class="badge badge-pill badge-secondary">RAILS</span>
